# printer-nanny

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: .pn-update-result.json  README.md  pyproject.toml
agent/printer_nanny_agent/: __init__.py  __main__.py  agent.example.toml  cli.py  client.py  config.py  discovery.py  mdns.py  oids.py  poller.py  runner.py  snmp.py  snmp_parse.py  spool.py  updater.py
agent/printer_nanny_agent/providers/: __init__.py  _vendors.py  brother.py  brother_ews.py  brother_maintenance.py  brother_pjl.py  hp.py  lexmark.py
central/: __init__.py  agent_release.py  audit.py  auth_oauth_smtp.py  auth_oidc.py  config.py  db.py  deps.py  enroll.py  main.py  models.py  msi_builder.py  queries.py  reports.py  runtime.py  schemas.py  secrets.py  security.py  seed.py  services.py  snmp.md  snmp_parse.py
central/api/: exports.py  ingest.py  management.py  reporting.py  scim.py
central/channels/: __init__.py  base.py  delivery.py  email.py  freescout.py  registry.py  slack.py  teams.py  webhook.py
central/dashboard/: _keystore.py  backup_routes.py  installer.py  manage.py  routes.py  settings_routes.py
central/dashboard/templates/: account.html  agents.html  alerts.html  approvals.html  audit.html  backup.html  base.html  client.html  client_manage.html  discovery.html  login.html  maintenance.html  manage_clients.html  manage_users.html  overview.html  portal.html  printer.html  printer_form.html  security_posture.html  settings.html  user_form.html
central/worker/: jobs.py  run.py
deploy/: Caddyfile  Caddyfile.template  Dockerfile  WINDOWS-MSI-TESTING.md  agent.Dockerfile  com.printernanny.agent.plist  install-agent.ps1  install-agent.sh  install.sh  printer-nanny-agent.service
docs/: competitive-playbook.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_readings_brin.py  0003_settings_and_auth.py  0004_supply_status_note.py  0005_printer_metadata.py  0006_subnet_discovery_status.py  0007_app_assets.py  0008_subnet_bind_interface.py  0009_subnet_snmp_v3.py  0010_printer_provider_trace.py  0011_agent_diagnostics.py  0012_audit_log.py  0013_printer_display_name.py  0014_notification_deliveries.py  0015_supply_forecast.py  0016_alert_routing_escalation.py  0017_maintenance_component.py  0018_printer_firmware.py  0019_report_runs.py  0020_user_scim.py  0021_meter_counters.py
scripts/: e2e_agent_demo.py  install-local-agent-macos.sh  setup-local-agent.sh
tests/: conftest.py  fakes.py  test_agent_buffer.py  test_agent_commands.py  test_agent_config.py  test_agent_discovery.py  test_agent_install_url.py  test_agent_poller.py  test_agent_self_update.py  test_agent_update_diagnostics.py  test_agent_update_ui.py  test_alert_routing.py  test_alerts.py  test_api_authz.py  test_audit_log.py  test_auth_oidc.py  test_backup_routes.py  test_branding.py  test_brother_ews_provider.py  test_brother_maintenance.py  test_brother_pjl_provider.py  test_brother_provider.py  test_channel_retry.py  test_channels.py  test_component_maintenance.py  test_csv_exports.py  test_customer_portal.py  test_device_posture.py  test_discovery_status.py  test_email_oauth.py  test_enroll.py  test_esg_rollup.py  test_freescout_ticketing.py  test_friendly_names.py  test_hp_provider.py  test_install_endpoints.py  test_lexmark_provider.py  test_logo_upload.py  test_maintenance_ui.py  test_mdns.py  (+24 more)
