[project]
name = "printer-nanny"
version = "0.1.0"
description = "Self-hosted fleet management for printers across MSP clients/sites"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "passlib>=1.7",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
agent = ["pysnmp>=6.2"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["central"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
