[project]
name = "printer-nanny"
version = "0.3.0"
description = "Self-hosted fleet management for printers across MSP clients/sites"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Stephen Warren", email = "stephen.warren09@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "passlib>=1.7",
    "itsdangerous>=2.1",
    "authlib>=1.3",
    # Encryption-at-rest for stored credentials (central/secrets.py). Already
    # a transitive dep via authlib; pinned explicitly because we import it.
    "cryptography>=42",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
# The site agent. `tomli` is only needed on Python < 3.11 (stdlib tomllib after).
agent = ["pysnmp>=6.2", "tomli>=2.0; python_version < '3.11'"]
# Hands-off auto-discovery via mDNS / Bonjour, layered on top of the SNMP
# sweep. When zeroconf is missing the agent degrades to SNMP-only silently.
agent-mdns = ["pysnmp>=6.2", "tomli>=2.0; python_version < '3.11'", "zeroconf>=0.132"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
printer-nanny-agent = "printer_nanny_agent.cli:main"

# TODO: update the org/repo slug once published to GitHub.
[project.urls]
Repository = "https://github.com/stephenthecold/printer-nanny"
Issues = "https://github.com/stephenthecold/printer-nanny/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["central", "printer_nanny_agent"]

[tool.setuptools.package-dir]
printer_nanny_agent = "agent/printer_nanny_agent"

[tool.setuptools.package-data]
printer_nanny_agent = ["agent.example.toml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
