# Standalone packaging for the site agent, so it can be installed on its own
# (no central-server dependency):
#   pip install "git+https://github.com/<org>/printer-nanny.git#subdirectory=agent"
#
# The repo root pyproject also includes this package for monorepo dev/tests.
[project]
name = "printer-nanny-agent"
version = "0.1.0"
description = "Printer Nanny site agent — SNMP collector that reports to the central server"
license = "Apache-2.0"
authors = [{ name = "Stephen Warren", email = "stephen.warren09@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pysnmp>=6.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
printer-nanny-agent = "printer_nanny_agent.cli:main"

# TODO: update the org/repo slug once published to GitHub.
[project.urls]
Repository = "https://github.com/your-org/printer-nanny"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["printer_nanny_agent"]

[tool.setuptools.package-data]
printer_nanny_agent = ["agent.example.toml"]
