# Standalone packaging for the site agent, so it can be installed on its own
# (no central-server dependency):
#   pip install "git+https://github.com/<org>/printer-nanny.git#subdirectory=agent"
#
# The repo root pyproject also includes this package for monorepo dev/tests.
[project]
name = "printer-nanny-agent"
version = "0.2.0"
description = "Printer Nanny site agent — SNMP collector that reports to the central server"
license = "Apache-2.0"
authors = [{ name = "Stephen Warren", email = "stephen.warren09@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pysnmp>=6.2",
    "tomli>=2.0; python_version < '3.11'",
]

# zeroconf gives the agent hands-off mDNS / Bonjour discovery on top of the
# always-on SNMP sweep. Optional so deployments that can't reach the
# multicast group (or that don't want the extra dep) skip it gracefully.
[project.optional-dependencies]
mdns = ["zeroconf>=0.132"]

[project.scripts]
printer-nanny-agent = "printer_nanny_agent.cli:main"

# TODO: update the org/repo slug once published to GitHub.
[project.urls]
Repository = "https://github.com/stephenthecold/printer-nanny"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Use find so future subpackages (providers/, etc.) get picked up
# automatically -- the previous explicit packages=["printer_nanny_agent"]
# silently dropped any subpackage, which broke when the providers/ plugin
# layer landed.
[tool.setuptools.packages.find]
include = ["printer_nanny_agent*"]

[tool.setuptools.package-data]
printer_nanny_agent = ["agent.example.toml"]
